project( arrays )

add_executable( q1_1 q1_1.cpp )
#target_link_libraries( q1_1 )
set_target_properties( q1_1 PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin )


add_executable( q1_2 q1_2.cpp )
#target_link_libraries( q1_2 )
set_target_properties( q1_2 PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin )


add_executable( q1_3 q1_3.cpp )
#target_link_libraries( q1_3 )
set_target_properties( q1_3 PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin )


add_executable( q1_4 q1_4.cpp )
#target_link_libraries( q1_4 )
set_target_properties( q1_4 PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin )
